--- a/pkg/controller/cainjector/BUILD.bazel
+++ b/pkg/controller/cainjector/BUILD.bazel
@@ -26,7 +26,9 @@ go_library(
         "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_kube_aggregator//pkg/apis/apiregistration/v1beta1:go_default_library",
         "@io_k8s_sigs_controller_runtime//:go_default_library",
+        "@io_k8s_sigs_controller_runtime//pkg/cache:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
+        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
     ],
