--- a/cmd/cainjector/app/BUILD.bazel
+++ b/cmd/cainjector/app/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "@com_github_spf13_pflag//:go_default_library",
         "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
         "@io_k8s_sigs_controller_runtime//:go_default_library",
+        "@org_golang_x_sync//errgroup:go_default_library",
     ],
 )
 
