--- a/pkg/controller/cainjector/BUILD.bazel
+++ b/pkg/controller/cainjector/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
+        "@com_github_pkg_errors//:go_default_library",
         "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
@@ -31,6 +32,7 @@ go_library(
         "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
+        "@org_golang_x_sync//errgroup:go_default_library",
     ],
 )
 
