--- a/deploy/charts/cert-manager/templates/webhook-service.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-service.yaml
@@ -10,6 +10,10 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/component: "webhook"
     helm.sh/chart: {{ include "webhook.chart" . }}
+  {{- if .Values.webhook.serviceAnnotations }}
+  annotations:
+{{ toYaml .Values.webhook.serviceAnnotations | indent 4 }}
+  {{- end }}
 spec:
   type: ClusterIP
   ports:
