--- a/deploy/crds/crd-orders.v1beta1.yaml
+++ b/deploy/crds/crd-orders.v1beta1.yaml
@@ -83,7 +83,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
@@ -219,7 +219,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
@@ -352,7 +352,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
@@ -489,7 +489,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
