--- a/deploy/crds/crd-orders.yaml
+++ b/deploy/crds/crd-orders.yaml
@@ -83,7 +83,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
@@ -237,7 +237,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
@@ -388,7 +388,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
@@ -543,7 +543,7 @@ spec:
                   items:
                     type: string
                 ipAddresses:
-                  description: IPAddresses is a list of IP address that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
+                  description: IPAddresses is a list of IP addresses that should be included as part of the Order validation process. This field must match the corresponding field on the DER encoded CSR.
                   type: array
                   items:
                     type: string
