--- a/test/e2e/framework/helper/BUILD.bazel
+++ b/test/e2e/framework/helper/BUILD.bazel
@@ -22,6 +22,8 @@ go_library(
         "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/e2e/framework/config:go_default_library",
+        "//test/e2e/framework/helper/featureset:go_default_library",
+        "//test/e2e/framework/helper/validations:go_default_library",
         "//test/e2e/framework/log:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
@@ -42,6 +44,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//test/e2e/framework/helper/featureset:all-srcs",
         "//test/e2e/framework/helper/validations:all-srcs",
     ],
     tags = ["automanaged"],
