--- a/deploy/crds/crd-orders.v1beta1.yaml
+++ b/deploy/crds/crd-orders.v1beta1.yaml
@@ -102,6 +102,10 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                notAfter:
+                  description: NotAfter is the date for the requested certificate's Not Valid After date
+                  type: string
+                  format: date-time
             status:
               type: object
               properties:
@@ -238,6 +242,10 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                notAfter:
+                  description: NotAfter is the date for the requested certificate's Not Valid After date
+                  type: string
+                  format: date-time
             status:
               type: object
               properties:
@@ -371,6 +379,10 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                notAfter:
+                  description: NotAfter is the date for the requested certificate's Not Valid After date
+                  type: string
+                  format: date-time
                 request:
                   description: Certificate signing request bytes in DER encoding. This will be used when finalizing the order. This field must be set on the order.
                   type: string
@@ -508,6 +520,10 @@ spec:
                     name:
                       description: Name of the resource being referred to.
                       type: string
+                notAfter:
+                  description: NotAfter is the date for the requested certificate's Not Valid After date
+                  type: string
+                  format: date-time
                 request:
                   description: Certificate signing request bytes in DER encoding. This will be used when finalizing the order. This field must be set on the order.
                   type: string
