--- a/deploy/charts/cert-manager/templates/rbac.yaml
+++ b/deploy/charts/cert-manager/templates/rbac.yaml
@@ -3,7 +3,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "cert-manager.fullname" . }}:leaderelection
+  name: {{ template "cert-manager.fullname" . }}-leaderelection
   namespace: {{ .Values.global.leaderElection.namespace }}
   labels:
     app: {{ include "cert-manager.name" . }}
@@ -29,7 +29,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "cert-manager.fullname" . }}:leaderelection
+  name: {{ include "cert-manager.fullname" . }}-leaderelection
   namespace: {{ .Values.global.leaderElection.namespace }}
   labels:
     app: {{ include "cert-manager.name" . }}
@@ -41,7 +41,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "cert-manager.fullname" . }}:leaderelection
+  name: {{ template "cert-manager.fullname" . }}-leaderelection
 subjects:
   - apiGroup: ""
     kind: ServiceAccount
