--- a/deploy/charts/cert-manager/templates/cainjector-rbac.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-rbac.yaml
@@ -59,7 +59,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "cainjector.fullname" . }}:leaderelection
+  name: {{ template "cainjector.fullname" . }}-leaderelection
   namespace: {{ .Values.global.leaderElection.namespace }}
   labels:
     app: {{ include "cainjector.name" . }}
@@ -88,7 +88,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "cainjector.fullname" . }}:leaderelection
+  name: {{ include "cainjector.fullname" . }}-leaderelection
   namespace: {{ .Values.global.leaderElection.namespace }}
   labels:
     app: {{ include "cainjector.name" . }}
@@ -100,7 +100,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "cainjector.fullname" . }}:leaderelection
+  name: {{ template "cainjector.fullname" . }}-leaderelection
 subjects:
   - kind: ServiceAccount
     name: {{ template "cainjector.serviceAccountName" . }}
