--- a/deploy/charts/cert-manager/templates/webhook-rbac.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-rbac.yaml
@@ -3,7 +3,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "webhook.fullname" . }}:dynamic-serving
+  name: {{ template "webhook.fullname" . }}-dynamic-serving
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app: {{ include "webhook.name" . }}
@@ -27,7 +27,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ template "webhook.fullname" . }}:dynamic-serving
+  name: {{ template "webhook.fullname" . }}-dynamic-serving
   namespace: {{ .Release.Namespace | quote }}
   labels:
     app: {{ include "webhook.name" . }}
@@ -39,7 +39,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "webhook.fullname" . }}:dynamic-serving
+  name: {{ template "webhook.fullname" . }}-dynamic-serving
 subjects:
 - apiGroup: ""
   kind: ServiceAccount
