Setup cainjectors on v1 and v1beta1 resources
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/pkg/controller/cainjector/BUILD.bazel
+++ b/pkg/controller/cainjector/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "controller.go",
         "indexers.go",
         "injectors.go",
+        "injectors-v1beta1.go",
         "setup.go",
         "sources.go",
     ],
@@ -16,14 +17,17 @@ go_library(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
+        "@io_k8s_api//admissionregistration/v1:go_default_library",
         "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/types:go_default_library",
+        "@io_k8s_kube_aggregator//pkg/apis/apiregistration/v1:go_default_library",
         "@io_k8s_kube_aggregator//pkg/apis/apiregistration/v1beta1:go_default_library",
         "@io_k8s_sigs_controller_runtime//:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/cache:go_default_library",
