Make deployment match labels configurable everywhere
Signed-off-by: Pavlos Tzianos <pavlos.tzianos@gmail.com>

--- a/deploy/charts/cert-manager/templates/cainjector-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-deployment.yaml
@@ -19,9 +19,13 @@ spec:
   replicas: {{ .Values.cainjector.replicaCount }}
   selector:
     matchLabels:
+{{- if .Values.deploymentMatchLabels }}
+{{ toYaml .Values.cainjector.deploymentMatchLabels | indent 6 }}
+{{- else }}
       app.kubernetes.io/name: {{ include "cainjector.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
       app.kubernetes.io/component: "cainjector"
+{{- end }}
   {{- with .Values.cainjector.strategy }}
   strategy:
     {{- . | toYaml | nindent 4 }}
