--- a/pkg/issuer/acme/http/BUILD.bazel
+++ b/pkg/issuer/acme/http/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "ingress.go",
         "pod.go",
         "service.go",
+        "store.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/http",
     visibility = ["//visibility:public"],
@@ -14,19 +15,24 @@ go_library(
         "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/issuer/acme/http/convertlister:go_default_library",
         "//pkg/issuer/acme/http/solver:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
+        "@com_github_davecgh_go_spew//spew:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_api//extensions/v1beta1:go_default_library",
+        "@io_k8s_api//networking/v1:go_default_library",
+        "@io_k8s_api//networking/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
         "@io_k8s_apimachinery//pkg/selection:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
-        "@io_k8s_client_go//listers/extensions/v1beta1:go_default_library",
+        "@io_k8s_client_go//listers/networking/v1:go_default_library",
+        "@io_k8s_client_go//scale/scheme/extensionsv1beta1:go_default_library",
         "@io_k8s_utils//net:go_default_library",
     ],
 )
@@ -68,6 +74,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/issuer/acme/http/convertlister:all-srcs",
         "//pkg/issuer/acme/http/solver:all-srcs",
     ],
     tags = ["automanaged"],
