--- a/pkg/internal/venafi/genericissuer/BUILD.bazel
+++ b/pkg/internal/venafi/genericissuer/BUILD.bazel
@@ -3,47 +3,51 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "checks.go",
         "controller.go",
+        "saver.go",
         "sync.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/issuers",
-    visibility = ["//visibility:public"],
+    importpath = "github.com/jetstack/cert-manager/pkg/internal/venafi/genericissuer",
+    visibility = ["//pkg:__subpackages__"],
     deps = [
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
-        "//pkg/internal/apis/certmanager:go_default_library",
-        "//pkg/issuer:go_default_library",
+        "//pkg/internal/venafi/client:go_default_library",
+        "//pkg/internal/venafi/defaults:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/webhook:go_default_library",
-        "@com_github_go_logr_logr//:go_default_library",
-        "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
-        "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
-        "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
     ],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = ["sync_test.go"],
+    srcs = [
+        "controller_test.go",
+        "saver_test.go",
+        "sync_test.go",
+        "util_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "//pkg/internal/venafi/client:go_default_library",
+        "//pkg/internal/venafi/client/fake:go_default_library",
+        "//pkg/logs:go_default_library",
+        "//test/unit/gen:go_default_library",
+        "@com_github_go_logr_logr//testing:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+        "@com_github_venafi_vcert_v4//pkg/endpoint:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
-        "@io_k8s_client_go//testing:go_default_library",
     ],
 )
 
@@ -56,10 +60,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/controller/issuers/venafi:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
