--- a/deploy/crds/BUILD.bazel
+++ b/deploy/crds/BUILD.bazel
@@ -26,9 +26,9 @@ concat_files(
 # without rendering the entirety of the cert-manager installation.
 # This means we can install the CRDs during integration tests, and also publish
 # the 'static manifest' variants of the CRDs.
-[helm_pkg(
-    name = "package.%s" % variant,
-    srcs = [":templates.%s" % variant],
+helm_pkg(
+    name = "package",
+    srcs = [":templates"],
     chart_name = "cert-manager",
     chart_yaml = "//deploy/charts/cert-manager:Chart.yaml",
     readme_file = "//deploy/charts/cert-manager:README.md",
@@ -37,7 +37,7 @@ concat_files(
     ],
     values_yaml = "//deploy/charts/cert-manager:values.yaml",
     visibility = ["//visibility:private"],
-) for (variant, meta) in variants.items()]
+)
 
 # Run 'helm template' against the chart containing only the CRDs that is
 # constructed in the above 'helm_pkg' rule.
