Fix chart files
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/charts/cert-manager/templates/BUILD.bazel
+++ b/deploy/charts/cert-manager/templates/BUILD.bazel
@@ -2,14 +2,13 @@ package(default_visibility = ["//visibility:public"])
 
 filegroup(
     name = "chart-srcs",
-    srcs = [
-        "crds.yaml",
-    ] + glob(
+    srcs = glob(
         [
             "*.yaml",
             "*.txt",
         ],
     ),
+    visibility = ["//visibility:public"],
 )
 
 filegroup(
