Add correct CRD source
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/charts/cert-manager/templates/BUILD.bazel
+++ b/deploy/charts/cert-manager/templates/BUILD.bazel
@@ -2,13 +2,15 @@ package(default_visibility = ["//visibility:public"])
 
 filegroup(
     name = "chart-srcs",
-    srcs = glob(
+    srcs = [
+        "//deploy/crds:templates",
+    ] + glob(
         [
             "*.yaml",
             "*.txt",
         ],
     ),
-    visibility = ["//visibility:public"],
+    visibility = ["//visibility:public"]
 )
 
 filegroup(
