Fix old CRD reference
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/test/integration/framework/BUILD.bazel
+++ b/test/integration/framework/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
         "paths.go",
     ],
     data = [
-        "//deploy/crds:crds.regular.yaml",
+        "//deploy/crds:crds.yaml",
         "//hack/bin:com_coreos_etcd",
         "//hack/bin:io_kubernetes_kube-apiserver",
         "//hack/bin:kubectl",
