--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -44,7 +44,7 @@ webhooks:
         resources:
           - "*/*"
     {{- if $isV1AdmissionRegistration }}
-    admissionReviewVersions: ["v1", "v1beta1"]
+    admissionReviewVersions: ["v1"]
     timeoutSeconds: {{ .Values.webhook.timeoutSeconds }}
     {{- end }}
     failurePolicy: Fail
