Allow setting Helm chart service annotations
Signed-off-by: Trey Dockendorf <tdockendorf@osc.edu>

--- a/deploy/charts/cert-manager/templates/service.yaml
+++ b/deploy/charts/cert-manager/templates/service.yaml
@@ -13,6 +13,10 @@ metadata:
 {{- if .Values.serviceLabels }}
 {{ toYaml .Values.serviceLabels | indent 4 }}
 {{- end }}
+{{- if .Values.serviceAnnotations }}
+  annotations:
+    {{ toYaml .Values.serviceAnnotations | indent 4 }}
+{{- end }}
 spec:
   type: ClusterIP
   ports:
