--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -143,6 +143,9 @@ podLabels: {}
 # Optional additional labels to add to the controller Service
 # serviceLabels: {}
 
+# Optional additional annotations to add to the controller service
+# serviceAnnotations: {}
+
 # Optional DNS settings, useful if you have a public and private DNS zone for
 # the same domain on Route 53. What follows is an example of ensuring
 # cert-manager can access an ingress or DNS TXT records at all times.
@@ -234,6 +237,9 @@ webhook:
 
   # Optional additional annotations to add to the webhook ValidatingWebhookConfiguration
   # validatingWebhookConfigurationAnnotations: {}
+
+  # Optional additional annotations to add to the webhook service
+  # serviceAnnotations: {}
 
   # Optional additional arguments for webhook
   extraArgs: []
