Updates testdata to use new validation function signature. Updates registry and scheme install
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/internal/apis/certmanager/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/BUILD.bazel
@@ -36,6 +36,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/internal/apis/certmanager/fuzzer:all-srcs",
+        "//pkg/internal/apis/certmanager/identity:all-srcs",
         "//pkg/internal/apis/certmanager/install:all-srcs",
         "//pkg/internal/apis/certmanager/v1:all-srcs",
         "//pkg/internal/apis/certmanager/v1alpha2:all-srcs",
