--- a/pkg/internal/BUILD.bazel
+++ b/pkg/internal/BUILD.bazel
@@ -9,6 +9,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/internal/api/mutation:all-srcs",
         "//pkg/internal/api/validation:all-srcs",
         "//pkg/internal/apis/acme:all-srcs",
         "//pkg/internal/apis/certmanager:all-srcs",
